--- a/DemoShop/DemoShop.csproj
+++ b/DemoShop/DemoShop.csproj
@@ -5,8 +5,15 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Content Remove="C:\Users\apple\.nuget\packages\allure.commons\3.5.0.73\contentFiles\any\netstandard2.0\allureConfig.Template.json" />
+    <Content Remove="C:\Users\apple\.nuget\packages\specflow.allure\3.5.0.73\contentFiles\any\netstandard2.0\allureConfig.Template.json" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Include="Allure.Commons" Version="3.5.0.73" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.5.0" />
     <PackageReference Include="SpecFlow" Version="3.9.22" />
+    <PackageReference Include="SpecFlow.Allure" Version="3.5.0.73" />
     <PackageReference Include="SpecFlow.Plus.LivingDocPlugin" Version="3.9.5" />
 
     
@@ -28,6 +35,15 @@
 
   <ItemGroup>
     <ProjectReference Include="..\AutomationLibrary\AutomationLibrary.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Update="allure-config.json">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+    <None Update="specflow.json">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
   </ItemGroup>
 
 </Project>
